Closed Bug 1676721 Opened 4 years ago Closed 4 years ago

Assertion failure: !mPuppetWidget->HasLayerManager(), at dom/ipc/BrowserChild.cpp:2694 when printing fission iframe via window.print()

Categories

(Core :: Graphics, defect, P3)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(2 files)

Attached file Test-case

See the test-case. This is basically bug 1676188.

This assert reproduces also without the patch, but the patch makes it much more frequent locally, and I believe it's at least part of the reason that bug happens.

I think what's going on is that we re-initialize the fission iframe's rendering twice under some circumstances, and that ends up confusing the compositor...

Before writing the patch for that bug I could barely reproduce it, but afterwards I can reproduce it basically consistently, so I should be able to dig more into this, but since the patch in there fixes the user-visible issue and also is a less brittle setup I think we should take it and move that here.

Flags: needinfo?(emilio)

Ah, I need the gfx.content.always-paint set to true for that to repro...

Severity: -- → S3
Priority: -- → P3

See the comment as for why.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/990cc484f91a Fix an incorrect assertion. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: