Bug 1676721 - Fix an incorrect assertion. r=mattwoodrow

See the comment as for why.

Differential Revision: https://phabricator.services.mozilla.com/D96788